build font-end server

--- a/goku-admin/src/routes/Admin.less
+++ b/goku-admin/src/routes/Admin.less
@@ -11,8 +11,9 @@
 }
 
 .logo {
-    height: 32px;
-    background: #333;
+    height: 100px;
+    background: url('../assets/img/logo.png') no-repeat center content-box;
+    background-size: contain;
     border-radius: 6px;
     margin: 16px;
-  }
+}
