--- a/fontend/src/routes/center/index.less
+++ b/fontend/src/routes/center/index.less
@@ -20,3 +20,13 @@
     text-align: center;
     font-size: .34rem;
 }
+
+.logout {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 1.2rem;
+    width: 4rem;
+    text-align: center;
+    left: 50%;
+    margin-left: -2rem;
+}
