--- a/fontend/src/components/Card/Profile.less
+++ b/fontend/src/components/Card/Profile.less
@@ -5,10 +5,11 @@
 
 .image {
     width: 100%;
+    height: 100%;
 }
 
 .footer {
-    margin: 0 0.2rem;
+    margin: 0.2rem;
     padding-bottom: .2rem;
 }
 
